--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "@storybook/testing-react": "^0.0.18",
+    "chromatic": "^6.5.4",
     "cypress": "^9.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "jest-axe": "^6.0.0",
