--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -80,6 +80,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-v1
       - name: Cypress run
-        uses: cypress-io/github-action@v2.3.6
+        uses: cypress-io/github-action@v2
         with:
+          install: false
           start: npm start
