update version user flow

--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -83,4 +83,5 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           install: false
+          working-directory: cypress/integration/e2e
           start: npm start
