--- a/package.json
+++ b/package.json
@@ -56,18 +56,28 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.5.0-beta.6",
+    "@storybook/addon-actions": "^6.5.0-beta.6",
+    "@storybook/addon-essentials": "^6.5.0-beta.6",
+    "@storybook/addon-links": "^6.5.0-beta.6",
+    "@storybook/builder-webpack5": "^6.5.0-beta.6",
+    "@storybook/manager-webpack5": "^6.5.0-beta.6",
+    "@storybook/node-logger": "^6.5.0-beta.6",
+    "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/react": "^6.5.0-beta.6",
+    "@storybook/testing-react": "^1.2.4",
     "autoprefixer": "^10.4.7",
-    "@storybook/node-logger": "^6.4.9",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.9",
-    "@storybook/testing-react": "^0.0.18",
     "chromatic": "^6.5.4",
     "cypress": "^9.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "jest-axe": "^6.0.0",
     "msw": "^0.32.0",
-    "msw-storybook-addon": "^1.2.0",
+    "msw-storybook-addon": "^1.6.3",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "webpack": "5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
