--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.2.6",
     "date-fns": "^2.29.3",
     "framer-motion": "^4",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
