--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@storybook/addon-a11y": "^6.5.0-beta.6",
     "@storybook/addon-actions": "^6.5.0-beta.6",
     "@storybook/addon-essentials": "^6.5.0-beta.6",
