--- a/package.json
+++ b/package.json
@@ -22,22 +22,27 @@
     "antd": "^5.1.7",
     "axios": "^1.2.6",
     "date-fns": "^2.29.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4",
+    "i18next": "^22.4.10",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.42.1",
-    "react-router-dom": "^6.3.0",
+    "react-i18next": "^12.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.57.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=6005 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -82,7 +87,7 @@
     "@storybook/addon-actions": "^6.5.0-beta.6",
     "@storybook/addon-essentials": "^6.5.0-beta.6",
     "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.0-beta.6",
+    "@storybook/addon-links": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.0-beta.6",
     "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.0-beta.6",
