--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-transition-group": "^4.4.5",
     "sass": "^1.57.1",
     "typescript": "^4.6.4",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
