--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "cypress": "cypress open",
+    "cp": "cypress open",
     "chromatic": "npx chromatic --project-token=0c6347f248df",
     "test-storybook": "test-storybook"
   },
@@ -100,7 +100,7 @@
     "@storybook/testing-react": "^1.2.4",
     "autoprefixer": "^10.4.7",
     "chromatic": "^6.5.4",
-    "cypress": "^9.6.0",
+    "cypress": "^12.7.0",
     "eslint-plugin-cypress": "^2.12.1",
     "jest-axe": "^6.0.0",
     "msw": "^0.32.0",
