--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@types/react-dom": "^18.2.19",
     "antd": "^5.13.3",
     "axios": "^1.2.6",
     "date-fns": "^2.29.3",
@@ -35,8 +35,10 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.42.1",
     "react-i18next": "^12.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.5",
     "sass": "^1.57.1",
     "typescript": "^4.6.4",
